# chatbot_reab

./: Dockerfile  app.py  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: prompt.xml  reab.md
routers/: waha_router.py
scripts/: start_server.sh  start_workers.sh
services/: waha_service.py
workers/: tasks.py
